back ground changed for about section

--- a/style.css
+++ b/style.css
@@ -16,5 +16,5 @@ body{
     padding-top: 5em;
 }
 .secondSection{
-    background: rgb(201, 134, 40);
+    background:linear-gradient(white,#ffd137,white);
 }
