--- a/style.css
+++ b/style.css
@@ -25,8 +25,17 @@ body{
     background: linear-gradient(lightgray,white);
 }
 .contactDetails{
-    
+    /*background:radial-gradient(lightgray,white,white);*/
 }
 #contact{
-    background: linear-gradient(rgb(171, 238, 144),white,lightgray);
+   /* background: linear-gradient(rgb(171, 238, 144),white,lightgray); */
+   padding-bottom: 5em;
 } 
+#footer{
+    background: darkgray;
+}
+.image{
+    background-image:url(https://scontent.fccj2-2.fna.fbcdn.net/v/t1.6435-9/184294979_1927853977368814_8427317817324610052_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=aQDK7coiOtoAX85mjsi&tn=Fmn4SQCjPSplbyge&_nc_ht=scontent.fccj2-2.fna&oh=460cebde40321567febd08d9455d95e0&oe=60DD9E7D);
+    background-size: contain;
+    background-size: cover;
+}
